# devops_uc3m

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: blank.yml  cd.yml  ci.yml  deploy.yml  docs.yml
Backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  requirements-dev.txt  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_initial_schema.py
Backend/app/: .env  main.py  main_skeleton_ag.py
Backend/app/api/: deps.py
Backend/app/core/: database.py  email.py  security.py  synonyms.py
Backend/scripts/: create_superuser.py
Backend/tests/: conftest.py
Frontend/: package-lock.json  package.json  vitest.config.js
Frontend/src/: App.jsx
calculator-app/: package-lock.json  package.json
calculator-app/public/: index.html
calculator-app/src/: App.css  App.js  Calculator.css  Calculator.js
docs/: architecture.md  index.md  requirements.md
docs/adr/: 0001-framework-backend-fastapi.md  0001-frontend-react.md  0002-autenticacion-jwt.md  0002-frontend-libraries.md  0003-verificacion-email-smtplib-mailtrap.md  0004-orm-sqlalchemy-asincrono-postgresql.md  0004-persistencia-en-memoria.md  0004-persistencia-postgresql.md  0005-frontend-react-vite.md  0006-elasticsearch-indexacion-noticias.md  0007-frontend-bootstrap-react-router.md  0008-calidad-codigo-ruff-ty.md  0009-estrategia-testing-pytest-vitest-playwright.md  0010-migraciones-bd-alembic-(obsoleto).md  0010-migraciones-bd-alembic.md  0011-pipeline-cicd-github-actions.md  0012-seguridad-scanning-pip-audit-trivy-sonarqube.md  0013-documentacion-backend-mkdocs-docstrings.md  0014-integracion-api-gestion-fuentes-alertas.md  0014-integración-api-gestion-fuentes-alertas.md  0014-postgresql-sqlalchemy-alembic.md  0015-postgresql-sqlalchemy-alembic.md  0016-generacion-sinonimos-wordnet.md
docs/ai/: usage.md
docs/backend/: api-reference.md  db-diagram.md  docstrings.md  er-diagram.md
docs/deployment/: cicd.md
docs/development/: quality.md  testing.md
e2e/: package-lock.json  package.json  playwright.config.js
e2e/tests/: auth.spec.js  smoke.spec.js
scripts/: build.sh  check.sh  ci-local.sh  deploy.sh  download-fasttext-es.sh  gen-docs.sh  start-dev.sh  test-backend.sh  test-e2e.sh  test-frontend.sh  test.sh
site/: 404.html  index.html  objects.inv
site/architecture/: index.html
site/requirements/: index.html
site/search/: search_index.json
(+64 files in other folders)
